[package]
name = "log-table"
version = "0.1.1"
edition = "2021"
authors = ["chen4903"]
keywords = ["log", "table"]
categories = []
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/log-table"
repository = "https://github.com/chen4903/log-table"
homepage = "https://github.com/chen4903/log-table"
description = """
Print and save logs in a table format.
"""

[dependencies]
colored = "3.0.0"
indexmap = "2.2.5"

[dev-dependencies]
alloy = "0.14.0"